[v0.6.1] - Enhance Habit List layout and styling - Updated grid settings in Habit List for consistent spacing and to prevent overflow. - Improved button visibility and interactivity on habit cards, adjusting styling with the new app theme. - Fixed layout issues with habit cards and horizontal scrolling on the Habit List page.

--- a/client/src/styles/HabitItem.css
+++ b/client/src/styles/HabitItem.css
@@ -1,15 +1,21 @@
 .habit-item {
-  background-color: #f5f5f5;
+  background-color: #333244;
+  color: #f0f0f0;
   padding: 15px;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   min-height: 250px;
   position: relative;
-  transition: background-color 0.3s, opacity 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.habit-item:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -20,12 +26,13 @@
   white-space: nowrap;
   width: 100%;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  margin-bottom: 10px;
 }
 
 
 .progress-badge {
-  background-color: red;
+  background-color: #564463;
   color: white;
   padding: 10px 20px;
   border-radius: 50px;
@@ -34,7 +41,7 @@
   margin: 15px auto;
   width: 100px;
   text-align: center;
-  transition: background 0.5s ease;
+  transition: background-color 0.3s;
 
   text-shadow: 
     -1px -1px 0 #000,  
@@ -50,7 +57,7 @@
   font-weight: bold;
   margin-top: 5px;
   opacity: 0;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease-in-out;
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -68,7 +75,7 @@
 
 .completed-label {
   font-style: italic;
-  color: #888;
+  color: #ccc;
   font-size: 1.4em;
   text-shadow: 1px 1px 2px black;
   position: relative;
@@ -77,9 +84,8 @@
 }
 
 .habit-item.completed {
-  background-color: #444;
-  color: #ccc;
-  opacity: 0.6;
+  background-color: #464355;
+  color: #bbb;
 }
 
 .habit-item.completed .completed-label {
@@ -89,8 +95,8 @@
 }
 
 .remove-button {
-  background-color: #666;
-  color: white;
+  background-color: #f6b93b;
+  color: #2c2233;
   border: none;
   padding: 8px 16px;
   font-size: 0.9em;
@@ -103,11 +109,36 @@
 
 
 .remove-button:hover {
-  background-color: #555;
-  color: #fd2222;
+  background-color: #ffd700;
+  color: #2c2233;
 }
 
 
 .remove-button.hidden {
   display: none;
 }
+
+
+
+.habit-item button {
+  background-color: transparent;
+  color: #f0f0f0;
+  border: 2px solid #f0f0f0;
+  padding: 5px 10px;
+  font-size: 0.8em;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+
+.habit-item button:hover {
+  background-color: #f6b93b;
+  color: #2c2233;
+}
+
+
+
+
