--- a/client/src/styles/HabitList.css
+++ b/client/src/styles/HabitList.css
@@ -1,9 +1,18 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+
 .habitspage-container {
 
     height: 100vh;
     background: linear-gradient(to top, #4a3c55d0 , #2c2233);
     color: #f0f0f0;
     padding-top: 30px;
+    overflow-x: hidden;
+    padding-right: 30px;
 }
 
 
@@ -13,7 +22,7 @@
     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     gap: 20px;
     column-gap: 40px;
-    padding: 20px;
+    padding: 10px;
 }
 
 
@@ -38,9 +47,14 @@
     transform: scale(1.05);
 }
 
-.add-habit-card svg {
+.filter-card:hover {
+    background-color: #3a2c44;
+    transform: scale(1.05);
+}
+
+.add-habit-card svg, .filter-card select {
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.6));
 }
 
@@ -69,4 +83,48 @@
 
 .category-tag.Personal {
     background-color: #e83e8c;
+}
+
+.filter-container {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+.filter-select {
+    border: 2px solid #444;
+    background-color: #333244;
+    color: #f0f0f0;
+    padding: 8px;
+    border-radius: 5px;
+    width: auto;
+}
+
+.filter-card {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #2c2233;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s;
+    width: auto;
+    min-width: 60px;
+}
+
+.filter-select {
+    border: none;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 5px 10px;
+    width: 100%;
+    text-align: center;
 }
